ASCII art for chits is now represented as a char[][]